--- a/receiver.html
+++ b/receiver.html
@@ -17,26 +17,31 @@
 			var receiving = false;
 			var self = this, room = 'foo';
 			var canvasContext = $('#remote')[0].getContext('2d');
+			var remoteImg = $('#remoteImg')[0];
 			
 			window.AudioContext = window.AudioContext || window.webkitAudioContext;
 			self.audioContext = new AudioContext();
 			var socket = io.connect();
 			socket.on('connect', function() {
 				socket.emit('register', { type: "receiver" });
-				socket.on('data', function(msg) {
+				socket.on('audio', function(msg) {
 					if (receiving) {
-						if (msg.audio) {
-							var data = new Int16Array(msg.audio);
-							data = convertInt16ToFloat32(data);
-							var buffer = self.audioContext.createBuffer(1, data.length, 8000);
-							var bufferSource = self.audioContext.createBufferSource();
-							buffer.getChannelData(0).set(data);
-							bufferSource.buffer = buffer;
-							bufferSource.connect(self.audioContext.destination);
-							bufferSource.start(0);
-						} else if (msg.video) {
-							canvasContext.putImageData(msg.video, 0, 0);
-						}
+						var data = new Int16Array(msg);
+						data = convertInt16ToFloat32(data);
+						var buffer = self.audioContext.createBuffer(1, data.length, 44100);
+						var bufferSource = self.audioContext.createBufferSource();
+						buffer.getChannelData(0).set(data);
+						bufferSource.buffer = buffer;
+						bufferSource.connect(self.audioContext.destination); 
+						bufferSource.start(0);
+					}
+				});
+				socket.on('video', function(data) {
+					if (receiving) {
+						remoteImg.src = data;
+//						var imageData = canvasContext.createImageData(data.width, data.height);
+//						for(var i = 0; i < data.data.length; i++) imageData.data[i] = data.data[i];
+//						canvasContext.putImageData(imageData, 0, 0);
 					}
 				});
 			});
@@ -53,5 +58,6 @@
 		<button id="receive">receive</button>
 		<button id="stop">stop</button>
 		<canvas id="remote" style="max-width: 320px; max-height: 240px"></canvas>
+		<img id="remoteImg" style="width:320px; height:240px"></img>
 	</body>
 </html>
